chore: resolve SonarQube findings across backend and frontend (#87)
* refactor(backend): resolve SonarQube findings across backend + build.gradle.kts

Mechanical/no-behavior-change cleanup pass through 18 flagged files:
Stream.collect(Collectors.toList()) -> .toList(), unused catch variables ->
unnamed patterns, duplicated string literals extracted to constants,
explicit-timezone Clock bean (new ClockConfig) replacing bare
LocalDateTime.now() calls, self-transactional-invocation fixes
(RecommendationService/SeriesService each split a public overload's shared
logic into a private non-@Transactional helper), and hardcoded Gradle
dependency versions extracted to named vals.

Also splits two over-threshold cognitive-complexity methods
(RecommendationService.validate/applyDiversityCap, SeriesService.update)
into several single-purpose private methods each well under the limit,
and reduces dedupeAndExclude's loop to a single continue by extracting
its body. No spec required -- a one-off quality pass, not a feature.

Full backend suite green throughout, including gradlew check (JaCoCo
80% coverage gate + SpotBugs high-confidence analysis).

* refactor(frontend): resolve SonarQube findings across components/tests

Mechanical passes: waitFor+getBy* -> findBy* across 8 test files (95
sites, via a small codemod handling 4 distinct call shapes); readonly
props on all 9 component Props interfaces; CSS alert-box contrast fix
across 7 module.css files (same-hue translucent background replaced
with a genuinely distinct opaque tint, verified by WCAG calculation and
a live browser pass in both themes); FormEvent -> SubmitEvent per
React's own deprecation notice; Number.NaN, nullish coalescing.

Per-file work: 6 cognitive-complexity functions split into single-
purpose helpers (AddSeriesForm x3, EditSeriesForm, RecommendationControls,
seriesApi.ts); 5 of 8 role="status"/"dialog" cases converted to
<output> (implicit role, verified live); the 3 role="dialog" cases left
as-is with a NOS